# good-boi

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  entrypoint.sh  example_config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
cogs/: ai.py  auto_answer.py  chat.py  explosm.py  general.py  hangman.py  image_generator.py  insult.py  mtg.py  ollama_text.py  reddit.py  static.py  voice.py  voice_music.py  xkcd.py  xkdc.py
data/: example_config.json  help.md  help_general_1.md  help_general_2.md  help_voice.md
llm/: Dockerfile
util/: ascii_hangman.py  config.py  const.py  data.py  discord_utils.py  text.py  ytdlp.py
