[tool.poetry]
name = "good-boi"
version = "0.1.0"
description = ""
authors = ["Andreas Rubik <rubikandreas@gmail.com"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
requests = "^2.26.0"
beautifulsoup4 = "^4.11.1"
zalgo-text = "^0.6"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
